_mini_examples/F030_LPx/EIDE/Release/unify_builder.log
[2025-11-25 22:03:28]	[info] incremental build: 4 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': object (.o) file not exist
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\py32f0xx_it.c': object (.o) file not exist
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': object (.o) file not exist
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\system_py32f0xx.c': object (.o) file not exist

[2025-11-25 22:03:28]	compilation failed at : "c:\MCU\PY32xx\_mini_examples\F030_LPx\System\system_py32f0xx.c", exit code: 1
command: 
  "c:\xpack\xpack-arm-none-eabi-gcc-14.2.1-1.1\bin\arm-none-eabi-gcc.exe" -c -xc -std=c23 -I../Inc -I../../../Drivers/CMSIS/Include -I../../../Drivers/CMSIS/Device/PY32F0xx/Include -D"PY32F030x6" -mcpu=cortex-m0plus -mthumb -Os -Wall -g -ffunction-sections -fdata-sections -funsigned-char --specs=nano.specs -o ./Release/.obj/__/System/system_py32f0xx.o -MMD ./../System/system_py32f0xx.c
   at unify_builder.Program.Main(String[] args_)
---
./../System/system_py32f0xx.c: In function 'SystemInit':
./../System/system_py32f0xx.c:174:48: error: 'RCC_CFGR_SW_LSI' undeclared (first use in this function); did you mean 'RCC_CFGR_SWS_LSI'?
  174 |   RCC->CFGR = (RCC->CFGR & ~RCC_CFGR_SW_Msk) | RCC_CFGR_SW_LSI;
      |                                                ^~~~~~~~~~~~~~~
      |                                                RCC_CFGR_SWS_LSI
./../System/system_py32f0xx.c:174:48: note: each undeclared identifier is reported only once for each function it appears in

[2025-11-25 22:08:16]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\system_py32f0xx.c': object (.o) file not exist

[2025-11-25 22:08:16]	link failed !, exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
C:/xpack/xpack-arm-none-eabi-gcc-14.2.1-1.1/bin/../lib/gcc/arm-none-eabi/14.2.1/../../../../arm-none-eabi/bin/ld.exe: ./Release/.obj/__/Src/main.o: in function `main':
c:\MCU\PY32xx\_mini_examples\F030_LPx\EIDE/./../Src/main.c:84:(.text.startup.main+0x86): undefined reference to `FlashExitFromSleep'
Memory region         Used Size  Region Size  %age Used
             RAM:         736 B         4 KB     17.97%
           FLASH:        1036 B        32 KB      3.16%
collect2.exe: error: ld returned 1 exit status


[2025-11-25 22:09:19]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 22:09:19]	compilation failed at : "c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c", exit code: 1
command: 
  "c:\xpack\xpack-arm-none-eabi-gcc-14.2.1-1.1\bin\arm-none-eabi-gcc.exe" -c -xc -std=c23 -I../Inc -I../../../Drivers/CMSIS/Include -I../../../Drivers/CMSIS/Device/PY32F0xx/Include -D"PY32F030x6" -mcpu=cortex-m0plus -mthumb -Os -Wall -g -ffunction-sections -fdata-sections -funsigned-char --specs=nano.specs -o ./Release/.obj/__/Src/main.o -MMD ./../Src/main.c
   at unify_builder.Program.Main(String[] args_)
---
./../Src/main.c: In function 'main':
./../Src/main.c:84:5: error: implicit declaration of function 'FlashExitFromSleep'; did you mean 'Flash_Exit_From_Sleep'? [-Wimplicit-function-declaration]
   84 |     FlashExitFromSleep();
      |     ^~~~~~~~~~~~~~~~~~
      |     Flash_Exit_From_Sleep

[2025-11-25 22:09:47]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 22:09:47]	[done]
	build successfully !

[2025-11-25 23:07:51]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:07:51]	[done]
	build successfully !

[2025-11-25 23:16:47]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:16:48]	[done]
	build successfully !

[2025-11-25 23:17:27]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:17:27]	[done]
	build successfully !

[2025-11-25 23:18:06]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:18:06]	[done]
	build successfully !

[2025-11-25 23:25:17]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:25:17]	compilation failed at : "c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c", exit code: 1
command: 
  "c:\xpack\xpack-arm-none-eabi-gcc-14.2.1-1.1\bin\arm-none-eabi-gcc.exe" -c -xc -std=c23 -I../Inc -I../../../Drivers/CMSIS/Include -I../../../Drivers/CMSIS/Device/PY32F0xx/Include -D"PY32F030x6" -mcpu=cortex-m0plus -mthumb -Os -Wall -g -ffunction-sections -fdata-sections -funsigned-char --specs=nano.specs -o ./Release/.obj/__/Src/main.o -MMD ./../Src/main.c
   at unify_builder.Program.Main(String[] args_)
---
./../Src/main.c: In function 'main':
./../Src/main.c:84:5: error: implicit declaration of function '_NOP' [-Wimplicit-function-declaration]
   84 |     _NOP();
      |     ^~~~

[2025-11-25 23:25:26]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:25:26]	[done]
	build successfully !

[2025-11-25 23:26:31]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:26:31]	[done]
	build successfully !

[2025-11-25 23:27:42]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:27:42]	[done]
	build successfully !

[2025-11-25 23:28:01]	[done]
	build successfully !

[2025-11-25 23:31:24]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:31:24]	[done]
	build successfully !

[2025-11-25 23:35:04]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:35:04]	[done]
	build successfully !

[2025-11-25 23:36:15]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:36:15]	[done]
	build successfully !

[2025-11-25 23:39:03]	[info] incremental build: 2 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:39:03]	[done]
	build successfully !

[2025-11-25 23:39:45]	[done]
	build successfully !

[2025-11-25 23:41:37]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:41:37]	[done]
	build successfully !

[2025-11-25 23:42:40]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:42:41]	[done]
	build successfully !

[2025-11-25 23:44:13]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\Src\main.c': source file has been changed.

[2025-11-25 23:44:13]	[done]
	build successfully !

[2025-11-25 23:46:15]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:46:15]	[done]
	build successfully !

[2025-11-25 23:47:37]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:47:38]	[done]
	build successfully !

[2025-11-25 23:47:52]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:47:52]	[done]
	build successfully !

[2025-11-25 23:48:38]	[info] incremental build: 1 source files changed
These source files will be recompiled
---
'c:\MCU\PY32xx\_mini_examples\F030_LPx\System\startup_py32f030xx.s': source file has been changed.

[2025-11-25 23:48:39]	[done]
	build successfully !

[2025-11-26 21:49:52]	[done]
	build successfully !

